--- a/aboutme.html
+++ b/aboutme.html
@@ -105,7 +105,7 @@ img {
 </style>
 </head>
 <body>
-    <img src="image/mypicture.jpg" alt="Avatar" style="width:200px">
+    <img src="image/myself.jpg" alt="Avatar" style="width:200px">
   </header>
 
   <!-- About Section -->
