--- a/myfamily.html
+++ b/myfamily.html
@@ -62,6 +62,7 @@ background-size: cover;
   <a href="myfamily.html">My Family</a>
    <a href="myfavoritesong.html">My Favorite Song</a>
   <a href="myfriends.html">My Friends</a>
+  <a href="myeducation.html">My Education</a>
   <a href="index.html" style="float:right">Home</a>
 </div>
 
