--- a/aboutme.html
+++ b/aboutme.html
@@ -113,8 +113,19 @@ img {
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-black">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Hi, my name is Muhamad Noor Asyraf Bin Fazil. I am 20 years old and I live in Bayan Lepaas, Pulau Pinang. I am currently on my last semester in university. My major is Information Management. Although this major might known about books and library, there is also an interesting subject like Web Content Management and Design. It has always been my passion to sudy web design and coding because I look up to my brother, which is very succesful in this field. I also studied Computer Science in high school before, which make me more interested in this subject !
+    <p>Hi, my name is Muhamad Noor Asyraf Bin Fazil. I am 20 years old and I live in Bayan Lepas, Pulau Pinang. I am currently on my last semester in university. My major is Information Management. Although this major might known about books and library, there is also an interesting subject like Web Content Management and Design. It has always been my passion to sudy web design and coding because I look up to my brother, which is very succesful in this field. I also studied Computer Science in high school before, which make me more interested in this subject !
     </p>
+	  <html>
+<body>
+
+<video width="320" height="240" controls>
+  <source src="video/resume.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+
+</body>
+</html>
     <h3 class="w3-padding-16 w3-text-black">My Skills</h3>
     <p class="w3-wide">Cataloging</p>
     <div class="w3-white">
